# opengl-practice

./: .clang-format  .gitignore  Makefile  README.md  main.c  meson.build  meson_options.txt  opengl_include.h
glad/: README.md  glad.c  meson.build
glad/glad/: glad.h  khrplatform.h
minimal/: README.md  meson.build  minimal.c
picture/: README.md  meson.build  picture.c
post_processing/: README.md  meson.build  post_processing.c  post_processing.h
sandwich/: README.md  meson.build  sandwich.c
scene_3d/: README.md  meson.build  scene_3d.c
scripts/: fetch_dependencies.py
triangle/: meson.build  triangle.c
