option('minimal',
  type : 'boolean',
  value : true,
  description : 'Run the minimal example'
)

option('sandwich',
  type : 'boolean',
  value : true,
  description : 'Run the sandwich example'
)

option('triangle',
  type : 'boolean',
  value : true,
  description : 'Run the triangle example'
)
