option(
  'minimal',
  type: 'boolean',
  value: true,
  description: 'Run the minimal example',
)

option(
  'sandwich',
  type: 'boolean',
  value: true,
  description: 'Run the sandwich example',
)

option(
  'triangle',
  type: 'boolean',
  value: true,
  description: 'Run the triangle example',
)

option(
  'picture',
  type: 'boolean',
  value: true,
  description: 'Run the picture example',
)

option(
  'post_processing',
  type: 'boolean',
  value: true,
  description: 'Run the picture example',
)

option(
  'scene_3d',
  type: 'boolean',
  value: true,
  description: 'Run the picture example',
)
